Kill steam-runtime-launcher-service process on exit

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -360,6 +360,7 @@ parts:
       - lsof
       - locales-all
       - usbutils # Allows finding controllers etc
+      - psmisc
     override-build: |
       craftctl default
       # Set the snap version from the .deb package version
