--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -181,6 +181,41 @@ parts:
       - usr/**/libxcb-render*
       - usr/**/libxkbcommon*
 
+  alsa-mixin:
+    plugin: dump
+    source: https://github.com/diddlesnaps/snapcraft-alsa.git
+    source-subdir: snapcraft-assets
+    build-packages:
+      - libasound2-dev
+    stage-packages:
+      - libasound2
+      - libasound2-plugins
+      - yad
+    stage:
+      # restrict to only audio-related files - you need to ensure
+      # that gtk3 is staged for yad to work correctly, to prompt
+      # users to connect the alsa plug or proceed with pulseaudio.
+      #
+      # This helps prevent symbol conflicts in situations where
+      # you're using a non-default library, such as those that the
+      # gnome-3-34 extension for core18 provides.
+      - etc/asound.conf
+      - snap/command-chain/alsa-launch
+      - usr/bin/yad*
+      - usr/lib/*/alsa-lib
+      - usr/lib/*/libasound*
+      - usr/lib/*/libasyncns*
+      - usr/lib/*/libdnsfile*
+      - usr/lib/*/libFLAC*
+      - usr/lib/*/libjack*
+      - usr/lib/*/libpulse*
+      - usr/lib/*/libsamplerate*
+      - usr/lib/*/libsndfile*
+      - usr/lib/*/libspeex*
+      - usr/lib/*/libvorbis*
+      - usr/lib/*/pulseaudio
+      - usr/share/alsa
+
   ninja:
     plugin: nil
     source: https://github.com/ninja-build/ninja.git
@@ -403,7 +438,7 @@ parts:
 
 apps:
   steam:
-    command-chain: [bin/desktop-launch]
+    command-chain: [snap/command-chain/alsa-launch, bin/desktop-launch]
     command: usr/lib/steam/bin_steam.sh -no-cef-sandbox
     environment:
       HOME: $SNAP_USER_COMMON
